Fix the Gap

--- a/index.css
+++ b/index.css
@@ -1,13 +1,28 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body{  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   border: 2px dotted rgb(96 139 168);
   display: flex;
 
+  margin: 0px;  
+
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 10px;  
+  
+  gap: 1px;  
 
-  width: 100%;
+  width: 960px;
+  height: 960px;
 }
 
 .container > * {
@@ -15,6 +30,6 @@
   border-radius: 5px;
   background-color: rgb(96 139 168 / 0.2);
 
-  width: 110px;
-  height: 110px;
+  width: 55px;
+  height: 55px;
 }
